# NPointTurn

./: CMakeLists.txt  Dockerfile  README.md  newsweepturn_profile.txt  setup.sh  simple_copy_profile.txt  unrolling_profile.txt  while_copy_profile.txt  while_copy_profile_small.txt
parkingplanner/: BUILD  CMakeLists.txt  Coord3d.hpp  ParkingPlanner.h  ParkingPlanner2.cpp  ParkingPlanner2.cu  ParkingPlanner2.hpp  ParkingPlanner2Test.cpp  ParkingPlanner_interface.cpp  TestFixtures.cpp
src/: Freespace.cu  Freespace.hpp  GenericCostSolver.cu  GenericCostSolver.hpp  Helper.hpp  MinimumTurnSolver.cu  MinimumTurnSolver.hpp  Obstacle.hpp  Paper.cu  Paper.hpp  Polygon.cpp  Polygon.hpp  SavePPM.hpp  SimpleDisp.cpp  SimpleDisp.hpp  Solver.cpp  Solver.hpp  Types.hpp  Vector.hpp  Visualization.cpp  Visualization.hpp  enum_gpu.cu  main.cu
tests/: FreespaceTests.cpp  PolygonTests.cpp  SOLTests.cu  SolverTests.cpp  VectorTests.cpp  tests.cpp  tests.cu
